--- a/_posts/2012-09-08-On-Art..markdown
+++ b/_posts/2012-09-08-On-Art..markdown
@@ -34,5 +34,5 @@ The same contrast as I found between these two artworks was on display upstairs,
 
 The third floor was closed at the time of my visit for the preparation of a series of architectural installations, which unfortunately also meant that I was unable to visit a small collection of Schiele. The fact that visitors were not informed up front that both the fountain installations and one-third of the interior galleries were closed was less than satisfactory on the part of the Guggenheim's management, but the entry fee was reasonable enough (eight euros) that I felt that I had got my money's worth, regardless.
 
-What I saw at the Guggenheim Bilbao reinforced my previous opinion that painting as an art form is in serious trouble. Large-scale installation such as Richard Serra's and Jenny Holzer's are often striking, while contemporary abstract sculpture often plays with light and texture in fascinating ways. Other pieces like Joseph Cornell's found-object boxes defy easy categorization, but remain entirely original. Painting, though, appears to have become unmoored from culture and generally accepted notions of beauty. Nowadays artists like Baselitz seem to take perverse pleasure in their ability to _*_epater la bourgeoisie*; the problem is that while this might have been worth doing a hundred years ago, these days the bourgeoisie is quite capable of getting its shocks on its own. The art world therefore is at risk of turning into a completely self-referential clique which is simultaneously baffled and secretly pleased at the disinterest with which the public treats its members. If institutions such as the Guggenheim - and indeed the artists whose works are exhibited there - are to survive as anything other than a desiccated carcass hinting at former glories, they will need to engage with this disconnect and address it head-on.
+What I saw at the Guggenheim Bilbao reinforced my previous opinion that painting as an art form is in serious trouble. Large-scale installation such as Richard Serra's and Jenny Holzer's are often striking, while contemporary abstract sculpture often plays with light and texture in fascinating ways. Other pieces like Joseph Cornell's found-object boxes defy easy categorization, but remain entirely original. Painting, though, appears to have become unmoored from culture and generally accepted notions of beauty. Nowadays artists like Baselitz seem to take perverse pleasure in their ability to *épater la bourgeoisie*; the problem is that while this might have been worth doing a hundred years ago, these days the bourgeoisie is quite capable of getting its shocks on its own. The art world therefore is at risk of turning into a completely self-referential clique which is simultaneously baffled and secretly pleased at the disinterest with which the public treats its members. If institutions such as the Guggenheim - and indeed the artists whose works are exhibited there - are to survive as anything other than a desiccated carcass hinting at former glories, they will need to engage with this disconnect and address it head-on.
 
