--- a/_posts/2017-04-18-A-New-Law.markdown
+++ b/_posts/2017-04-18-A-New-Law.markdown
@@ -5,12 +5,9 @@ date:   2017-04-18
 categories:  social social-media LinkedIn 
 ---
 
-# A New Law
-
-
 I was hanging out on [LinkedIn](https://www.linkedin.com/in/dwellington/ ), and I happened to notice a new pop-up, offering to help me boost my professional image with new photo filters.
 
-![|1242x0](/images/IMG_0564.PNG)
+![](/images/IMG_0564.PNG)
 
 My professional image may well need all sorts of help, but I do wonder whether this feature was the most productive use of LinkedIn’s R&D time.
 
